--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="demo">
-
+     <p id="text"> Random Text </p>
     </div>
    <script src="fetch.js"></script>
   </body>
